--- a/lab2(*)/docker_compose.bad.yml
+++ b/lab2(*)/docker_compose.bad.yml
@@ -20,4 +20,4 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: testdb
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql
