--- a/lab2(*)/docker_compose.yml
+++ b/lab2(*)/docker_compose.yml
@@ -2,31 +2,31 @@ version: '3.8'
 
 services:
   web:
-    image: nginx:1.25.4           # Фиксированная версия
+    image: nginx:1.25.4          # Фиксированная версия образа
     ports:
       - "8080:80"
     volumes:
       - ./html:/usr/share/nginx/html:ro
+      - ./nginx_cache:/var/cache/nginx
     environment:
       - NGINX_PORT=80
-    user: "1001:1001"             # Непривилегированный пользователь
     networks:
       - web_net
     depends_on:
       - db
 
   db:
-    image: postgres:16.2          # Фиксированная версия
+    image: postgres:16.2         # Фиксированная версия образа
     environment:
       POSTGRES_USER: app_user
       POSTGRES_PASSWORD: strongpassword
       POSTGRES_DB: testdb
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql
     networks:
       - db_net
 
-# Отдельные сети для изоляции
+# Сети для изоляции контейнеров
 networks:
   web_net:
     driver: bridge
