--- a/.github/workflows/good-ci.yml
+++ b/.github/workflows/good-ci.yml
@@ -1,27 +1,21 @@
-name: Good CI Example
+name: Good CI
 
 on:
   push:
-  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
-
-    timeout-minutes: 5
+    runs-on: ubuntu-22.04   # Фиксированная версия ОС
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4 
-
-      - name: Setup Node.js  
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4   # Последняя стабильная версия checkout
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: "18"  
-          cache: "npm" 
-
-      - name: Install dependencies
-        run: npm ci
-
+          node-version: '20'    # Используем встроенный и фиксированный Node.js
       - name: Run build
-        run: npm run build
+        run: |
+          echo "Building project..."
+          timeout 10 bash -c 'sleep 5'  # Демонстрация таймаута
